tests/compile/require-enum-variants.rs
use sternum::Sternum;

#[derive(Sternum)]
enum A {}

fn main() {}
